fix http to https request and add select rules

--- a/config.ini
+++ b/config.ini
@@ -1,20 +1,22 @@
 # Target block is about the Cloudera data for API connection
 [target]
 # Cloudera master Host
-host                           = cloudera_manager
+host                           = cloudera.com
 # Cloudera API Port
-port                           = 7180
+port                           = 7183
 # The next param overwrite values obtained by API query. If you don't want to overwrite it, leave the param blank
 # Cloudera API Version (vXX)
-version                        = 
+version                        = v30
+#request list http or https
+request_type                        = http
 
 
 # User block is about the Cloudera credentials for API connection
 [user]
 # User name (Only read permision is required)
-username                       = USER
+username                       = admin
 # User Password
-password                       = PASSWD
+password                       = 123456
 
 
 # Modules block is about the metrics module it's gonna be loaded. By default all of them are false.
@@ -28,9 +30,9 @@ host_module                    = true
 # HDFS metrics module
 hdfs_module                    = true
 # Impala metrics module
-impala_module                  = true
+impala_module                  = false
 # Yarn metrics module (Still doesn't work)
-yarn_module                    = false
+yarn_module                    = true
 
 
 # System block is about the Exporters run parameters
