Add https support

--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,8 @@
 host                           = cloudera_manager
 # Cloudera API Port
 port                           = 7180
+# Use tls for https Host
+use_tls                        = false
 # The next param overwrite values obtained by API query. If you don't want to overwrite it, leave the param blank
 # Cloudera API Version (vXX)
 version                        = 
